# romu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  nightly.yml  stable.yml
benches/: random.rs
examples/: random.rs
src/: lib.rs  rand_compatibility.rs  simd.rs  stable_simd.rs  stable_tls.rs  unstable_simd.rs  unstable_tls.rs
src/stable_simd/: avx2.rs  fallback.rs  mod.rs  rng128.rs  rng256.rs  rng512.rs  sse2.rs
src/stable_simd/rng256/: avx2.rs  fallback.rs
src/stable_simd/rng512/: avx2.rs  fallback.rs
