[package]
name = "romu"
description = "A pseudo random number generator using the Romu algorithm."
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
keywords = ["rand", "random", "no-std", "romu"]
categories = ["algorithms", "no-std"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/romu"
repository = "https://github.com/hasenbanck/romu/"
version = "0.7.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
getrandom = { version = "0.3", optional = true }
rand_core = { version = "0.9", optional = true }

[dev-dependencies]
criterion = "0.7"

[features]
default = ["std", "tls", "getrandom"]
std = []
tls = ["std"]
unstable_tls = ["std"]
unstable_simd = []
rand = ["dep:rand_core"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.bench]
opt-level = 3
codegen-units = 1
lto = "fat"

[[bench]]
name = "random"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
